--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     <!-- link to css file -->
     <title>Frontend Mentor | Manage landing page</title>
   </head>
-  <body class="z-0">
-    <img src="images/bg-tablet-pattern.svg" alt="bg-pattern-top" class="absolute top-0 left-0 hidden md:block z-10" />
+  <body>
+     
     <!-- navbar -->
-    <nav class=" absolute top-0 left-0 container mx-auto p-6 z-30">
+    <nav class="relative container mx-auto p-6">
+      <!-- flex container -->
       <div class="flex flex-col items-center justify-between md:flex-row">
         <div class="pt-2">
           <img src="images/logo.svg" alt="logo" />
