--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <title>Frontend Mentor | Manage landing page</title>
   </head>
   <body>
-     
     <!-- navbar -->
     <nav class="relative container mx-auto p-6">
       <!-- flex container -->
@@ -39,23 +38,29 @@
           >Get Started</a
         >
         <!--hamburger menu-->
+
+        <button
+          id="menu-btn"
+          class="block hamburger md:hidden focus:outline-none"
+        >
+          <span class="hamburger-top"></span>
+          <span class="hamburger-middle"></span>
+          <span class="hamburger-bottom"></span>
+        </button>
+
+        <!--mobile menu-->
         <div class="md:hidden">
-          <button id="menu-btn"class="block hamburger md:hidden focus:outline-none">
-            <span class="hamburger-top"></span>
-            <span class="hamburger-middle"></span>
-            <span class="hamburger-bottom"></span>
-          </button>
-      </div>
-      <!--mobile menu-->
-      <div class="md:hidden">
-<div id="menu" class="absolute flex flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold bg-white sm:w-auto sm:self-center left-6 right-6 drop-shadow-md">
-  <a href="#" class="hover:text-darkGreyishBlue">Pricing</a>
-  <a href="#" class="hover:text-darkGreyishBlue">Product</a>
-  <a href="#" class="hover:text-darkGreyishBlue">About Us</a>
-  <a href="#" class="hover:text-darkGreyishBlue">Careers</a>
-  <a href="#" class="hover:text-darkGreyishBlue">Community</a>
-  
-</div>
+          <div
+            id="menu"
+            class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold bg-white sm:w-auto sm:self-center left-6 right-6 drop-shadow-md"
+          >
+            <a href="#" class="hover:text-darkGreyishBlue">Pricing</a>
+            <a href="#" class="hover:text-darkGreyishBlue">Product</a>
+            <a href="#" class="hover:text-darkGreyishBlue">About Us</a>
+            <a href="#" class="hover:text-darkGreyishBlue">Careers</a>
+            <a href="#" class="hover:text-darkGreyishBlue">Community</a>
+          </div>
+        </div>
       </div>
     </nav>
 
@@ -278,7 +283,7 @@
     <section id="cta" class="bg-brightRed">
       <!--flex container-->
       <div
-        class="container flex flex-col items-center justify-between p-3 space-y-0 mx-auto md:flex-row  md:align-middle"
+        class="container flex flex-col items-center justify-between p-3 space-y-0 mx-auto md:flex-row md:align-middle"
       >
         <!--heading-->
         <h2
@@ -302,13 +307,15 @@
     <footer class="footer">
       <!--flex container-->
       <div
-        class="container flex flex-col-reverse justify-between px-6 py-10 mx-auto space-y-8 md:flex-row md:space-y-0 "
+        class="container flex flex-col-reverse justify-between px-6 py-10 mx-auto space-y-8 md:flex-row md:space-y-0"
       >
         <!--logo/social links-->
         <div
           class="flex flex-col-reverse items-center justify-between space-y-12 md:flex-col md:space-y-0 md:items-start"
         >
-        <div class="mx-auto my-6 text-center text-white md:hidden">Copyright &copy;2022, All rights reserved</div>
+          <div class="mx-auto my-6 text-center text-white md:hidden">
+            Copyright &copy;2022, All rights reserved
+          </div>
           <!--logo-->
           <div>
             <img src="images/logo.svg" class="h-8 bg-white" alt="manage logo" />
@@ -333,17 +340,24 @@
         <div class="flex flex-col justify-between">
           <form>
             <div class="flex justify-center space-x-3">
-              <input type="text" class="flex-1 px-4 rounded-full focus:outline-none"
-              placeholder="Updated in your inbox">
-              <button class="px-6 py-2 text-white rounded-full bg-brightRedLight hover:bg-brightRed focus:outline-none">Go</button>
-
+              <input
+                type="text"
+                class="flex-1 px-4 rounded-full focus:outline-none"
+                placeholder="Updated in your inbox"
+              />
+              <button
+                class="px-6 py-2 text-white rounded-full bg-brightRedLight hover:bg-brightRed focus:outline-none"
+              >
+                Go
+              </button>
             </div>
           </form>
           <div class="hidden text-white md:block">
-Copyright &copy 2022,All Rights Reserved
+            Copyright &copy 2022,All Rights Reserved
           </div>
         </div>
       </div>
     </footer>
+    <script src="js/script.js"></script>
   </body>
 </html>
