--- a/index.html
+++ b/index.html
@@ -338,10 +338,10 @@
         </div>
         <!--input container-->
         <div class="flex flex-col justify-between">
-          <form>
+          <form id="newsletter-form">
             <div class="flex justify-center space-x-3">
               <input
-                type="text"
+                type="email" id="email"
                 class="flex-1 px-4 rounded-full focus:outline-none"
                 placeholder="Updated in your inbox"
               />
