--- a/index.html
+++ b/index.html
@@ -341,7 +341,8 @@
           <form id="newsletter-form">
             <div class="flex justify-center space-x-3">
               <input
-                type="email" id="email"
+                type="email"
+                id="email"
                 class="flex-1 px-4 rounded-full focus:outline-none"
                 placeholder="Updated in your inbox"
               />
